--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": [
       "error"
-    ]
+    ],
+    " @typescript-eslint/no-unused-vars": "off"
   }
 }
