--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.9",
+    "html-react-parser": "^5.1.18",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "react": "^18",
