change server url

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BASE_URL=https://executiveheadlines.com/admin/api
-NEXT_PUBLIC_BASE_IMAGE_URL=https://executiveheadlines.com/admin/media/
+BASE_URL=https://headlines.executiveheadlines.com/admin/api
+NEXT_PUBLIC_BASE_IMAGE_URL=https://headlines.executiveheadlines.com/admin/media/
